# cargo-customs

./: Cargo.toml  Customs.toml  README.md  TODO.md
.github/workflows/: check.yaml
src/: main.rs
tests/: tests.rs
tests/lonely-crate/: Cargo.toml  Customs.toml
tests/lonely-crate/src/: lib.rs  main.rs
tests/workspace/: Cargo.toml
tests/workspace/no-customs/: Cargo.toml
tests/workspace/sub/bar/: Customs.toml
